--- a/AUTHORS
+++ b/AUTHORS
@@ -5,12 +5,12 @@ We would like to express our gratitude to the following individuals who have con
 ## Project Lead
 
 - [Zerrad Aissa](jesus.jesus.core@gmail.com) - Project Lead
-- [Lahroud Amine]() - Project Lead
+- [Lahroud Amine](aminoxlhd@gmail.com) - Project Lead
 
 ## Core Contributors
 
-- [Contributor 1](https://github.com/) - Core Developer
-- [Contributor 2](https://github.com/) - Core Developer
+- [Contributor 1](https://github.com/aminoxlhd) - Core Developer
+- [Contributor 2](https://github.com/aissap) - Core Developer
 
 ## Special Thanks
 
